style.css
html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

nav {
  background: none;
  color: #fff;
  box-shadow: none;
}

p {
  font-family: 'Droid Serif',Georgia,Cambria,"Times New Roman",Times,serif;
}

@media all and (min-width: 800px) {
  p {
    font-size: 1.2em;
  }
}


.hero {
  background-image: linear-gradient(135deg, #81c, #18c);
  background-size: cover;
  width: 100%;
}

.hero header {
  color: #fff;
  font-family: sans-serif;
  text-align: center;
  padding: 50px 20px;
}

.hero header p {
  margin: 10px 0;
  font-family: inherit;
}

.hero header h1 {
  font-size: 2em;
  padding: 0;
  font-weight: normal;
}

.hero header .button {
  background: none;
  border: 2px solid #fff;
}

.paper {
  color: #333;
  background: #fff;
  padding: 20px 20px 30px;
  max-width: 800px;
  margin: 0 auto;
}

@media all and (min-width: 800px) {
  .hero header {
    padding-top: 100px 20px 50px;
  }
  .paper {
    padding: 30px 30px 40px;
    border-radius: .3em .3em 0 0;
    box-shadow: .3em -.3em .3em -.3em rgba(0, 0, 0, .5);
  }
}

.paper > *:first-child {
  margin-top: 0;
  padding-top: 0;
}

.paper > *:last-child {
  margin-bottom: 0;
  padding-bottom: 0;
}

.paper h1,
section h2 {
  padding-bottom: 0;
}

main,
footer {
  margin: 0 auto 100px;
}

main section {
  width: 100%;
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
}

@media all and (min-width: 800px) {
  main section {
    padding: 60px 30px;
  }
}

section.features {
  text-align: center;
  margin-top: 30px;
}

section.quote p {
  text-align: center;
  font-size: 1.3em;
  max-width: 570px;
  margin: 0 auto;
}

section.example h2 {
  padding-top: 0;
  /*line-height: 1;*/
}

section.example p {
  margin: 10px 0;
}

section.example img {
  border-radius: .3em;
}

section.guide {
  max-width: none;
  margin-top: 50px;
  margin-bottom: 30px;
  background: #222;
  color: #fff;
  padding: 50px 20px;
}

section.guide .content {
  width: 100%;
  max-width: 800px;
  margin: 0 auto;
}

section.guide p {
  margin: 10px 0;
}

section.guide img {
  width: 50%;
  max-width: 100px;
  margin: 0 auto;
  display: block;
  opacity: .7;
  filter: invert(100%);
}

@media all and (min-width: 800px) {
  section.guide img {
    margin: 65px auto 0;
  }
  section.example img {
    width: 85%;
    margin: 0 10% 0 5%;
  }
}

section h3 {
  padding: 0;
}
section h3 + p {
  margin-top: 10px;
}

section img {
  width: 100%;
}

form label {
  margin-bottom: 10px;
}

form p {
  margin: 0;
  font-family: inherit;
}

form p.subtitle {
  color: #666;
  font-size: .85em;
}

footer {
  width: 100%;
  max-width: 800px;
  margin: 50px auto;
  text-align: center;
}

section.features .flex > * {
  position: relative;
}

section.features .flex > *::after {
  position: absolute;
  line-height: 1;
  top: calc(10vw - .5em);
  font-size: 3em;
}

section.features .flex > *:first-child::after {
  content: '+';
  right: -.4em;
}

section.features .flex > *:last-child::after {
  content: '↓';
  top: -1em;
  right: calc(50% - .33em);
}

@media all and (min-width: 600px) {
  section.features .flex > *::after {
    top: 15%;
  }

  section.features .flex > *:nth-child(2)::after {
    content: '=';
    right: -.6em;
  }

  section.features .flex > *:last-child::after {
    display: none;
  }
}


section.features img {
  display: block;
  width: 50%;
  margin: 0 auto;
}

